code: Fix many refs to manubot format

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,5 +1,11 @@
 
 # Articles to read 
+
+Formalization of taxon-based constraints to
+detect inconsistencies in annotation and
+ontology development
+
+
 ## Describing Species - Judith Winston
 [@doi:10.1017/CBO9781107415324.004]
 
