--- a/content/03.claims.md
+++ b/content/03.claims.md
@@ -3,200 +3,199 @@
 \chapter{Cell types
 # We need a formal framework
 ## A periodic table of cell types
-    \cite{xia2019periodic
+    [@doi:10.1242/dev.169854]
     
 # Cell types are continuous in development
 ## A periodic table of cell types
-    \cite{xia2019periodic
+    [@doi:10.1242/dev.169854]
     
 # We can define cell types using transcription factors
 ## A periodic table of cell types
-    \cite{xia2019periodic
+    [@doi:10.1242/dev.169854]
 ## The origin and evolution of cell types
-    \cite{  \cite{arendt2016origin
+    [@doi:10.1038/nrg.2016.127]
 ## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
-    \cite{sugino2019mapping
+    [@doi:10.7554/eLife.38619]
 ## Construction of a human cell landscape at single-cell level
-    \cite{citation
+    [@doi:10.1038/s41586-020-2157-4]
         
 # Different locations may entail different states
 ## A periodic table of cell types
-    \cite{xia2019periodic
+    [@doi:10.1242/dev.169854]
     
 # C. elegans is a good model organism for cell-type definitions
 ## A periodic table of cell types
-    \cite{xia2019periodic
+    [@doi:10.1242/dev.169854]
 ## What Is Your Conceptual Definition of “Cell Type” in the Context of a Mature Organism? 
-    \cite{clevers2017your
+    [@doi:10.1016/j.cels.2017.03.006]
 ## Terminal Selectors of Neuronal Identity
-    \cite{hobert2016terminal
+    [@doi:10.1016/bs.ctdb.2015.12.007]
     
 # The retina is a good case study for cell-type definitions
 
 ## The evolution of cell types in animals: emerging principles from molecular studies
-    \cite{arendt2008evolution
+    [@doi:10.1038/nrg2416]
 ## Function first: classifying cell types and circuits of the retina
-    \cite{vlasits2019function
+    [@doi:10.1016/j.conb.2018.10.011] 
 ## Key transitions during the evolution of animal phototransduction: novelty, "tree-thinking," co-option, and co-duplication.
-    \cite{plachetzki2007key
+    [@doi:10.1093/icb/icm050]
 ## Neuronal cell types
-    \cite{masland2004neuronal
-[@doi:10.1186/s12859-017-1980-6]
+    [@doi:10.1186/s12859-017-1980-6]
     
 # Cell-type markers might not be valid across all taxons of interest
 ## How Single-Cell Genomics Is Changing Evolutionary and Developmental Biology
-    \cite{marioni2017single
+    [@doi:10.1146/annurev-cellbio-100616-060818]
 ## The evolution of cell types in animals: emerging principles from molecular studies
-    \cite{arendt2008evolution
+    [@doi:10.1038/nrg2416]
     
 # Cell types are organized in a tree structure
 ## How Single-Cell Genomics Is Changing Evolutionary and Developmental Biology
-    \cite{marioni2017single    
+    [@doi:10.1146/annurev-cellbio-100616-060818]    
 ## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
-    \cite{sugino2019mapping
+    [@doi:10.7554/eLife.38619]
 ## CHETAH: a selective, hierarchical cell type identification method for single-cell RNA sequencing
-    \cite{de2019chetah    
+    [@doi:10.1093/nar/gkz543]    
     
 # Cell types can evolve similarity by phenotypic convergence
 ## The origin and evolution of cell types
-    \cite{arendt2016origin
+    [@doi:10.1038/nrg.2016.127]
 
 # Cell types can suffer concerted evolution    
 ## The origin and evolution of cell types
-    \cite{arendt2016origin
+    [@doi:10.1038/nrg.2016.127]
     
 # A cell type is a set of cells
 ## The origin and evolution of cell types
-    \cite{arendt2016origin
+    [@doi:10.1038/nrg.2016.127]
 ## What Is Your Conceptual Definition of “Cell Type” in the Context of a Mature Organism? 
-    \cite{clevers2017your
+    [@doi:10.1016/j.cels.2017.03.006]
 ## CHETAH: a selective, hierarchical cell type identification method for single-cell RNA sequencing
-    \cite{de2019chetah
+    [@doi:10.1093/nar/gkz543]
     
 # Homologous cell types can exert distinct functions
 ## The evolution of cell types in animals: emerging principles from molecular studies
-    \cite{arendt2008evolution
+    [@doi:10.1038/nrg2416]
     
 # Ancient cell types had multiple functions, more than current specialized cell types
 ## The evolution of cell types in animals: emerging principles from molecular studies
-    \cite{arendt2008evolution
+    [@doi:10.1038/nrg2416]
     
 # There are hundreds of human cell types
 ## The evolution of cell types in animals: emerging principles from molecular studies
-    \cite{arendt2008evolution
+    [@doi:10.1038/nrg2416]
 ## What Is Your Conceptual Definition of “Cell Type” in the Context of a Mature Organism? 
-    \cite{clevers2017your 
+    [@doi:10.1016/j.cels.2017.03.006] 
 ## Defining cell types and states with single-cell genomics
     \cite{trapnell2015defining
     
 # The mammalian retina likely contains 100 neuron types alone
 ## Function first: classifying cell types and circuits of the retina
-    \cite{vlasits2019function   
+    [@doi:10.1016/j.conb.2018.10.011]   
     
 # It is challenging to compare studies that used different samples types
 ## Cell type discovery using single-cell transcriptomics: implications for ontological representation
-    \cite{aevermann2018cell
+    [@doi:10.1093/hmg/ddy100]
 
 # Cell types should be defined by function
 ## What Is Your Conceptual Definition of “Cell Type” in the Context of a Mature Organism? 
-    \cite{clevers2017your
+    [@doi:10.1016/j.cels.2017.03.006]
 ## Function first: classifying cell types and circuits of the retina
-    \cite{vlasits2019function
+    [@doi:10.1016/j.conb.2018.10.011]
 
 # Informal textual definitions can then be converted into formal ontological definitions
 
 # Traditionally, a cell type is s a morphologically distinguishable entity 
 ## Exciting times to study the identity and evolution of cell types 
-    \cite{sachkova2019exciting
+    [@doi:10.1242/dev.178996]
     
 # Cell types are not static
 ## Exciting times to study the identity and evolution of cell types 
-    \cite{sachkova2019exciting
+    [@doi:10.1242/dev.178996]
     
 # We can  create useful, working definitions of cell types (nominal definitions)
 ## Function first: classifying cell types and circuits of the retina
-    \cite{vlasits2019function
+    [@doi:10.1016/j.conb.2018.10.011]
     
 # Classification scheme depends on inquiry scientist chooses to undertake
 ## Function first: classifying cell types and circuits of the retina
-    \cite{vlasits2019function
+    [@doi:10.1016/j.conb.2018.10.011]
 
 # We cannot match a cell type to the Cell Ontology if we do not have the information about markers
 ## Cell type discovery and representation in the era of high-content single cell phenotyping
-    \cite{bakken2017cell
+    [@doi:10.1186/s12859-017-1977-1]
 
 # A solution to the partial marker problem is sorely needed
 ## Cell type discovery and representation in the era of high-content single cell phenotyping
-    \cite{bakken2017cell
+    [@doi:10.1186/s12859-017-1977-1]
     
 # It is an open challenge to match cell populations identified using assay platforms
 ## Cell type discovery and representation in the era of high-content single cell phenotyping
-    \cite{bakken2017cell
+    [@doi:10.1186/s12859-017-1977-1]
 
 # We can find an "atomic" cell type
 ## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
-    \cite{sugino2019mapping
+    [@doi:10.7554/eLife.38619]
     
 # Analyses of gene expression leads to redefinition to what we mean by cell type
 ## The Definition of Cell Type
-    \cite{schwartz1999definition
+    [@doi:10.1161/01.RES.84.10.1234]
 
 # There is such a thing as a  "complete list of cell types"
 ## CellFishing.jl: an ultrafast and scalable cell search method for single-cell RNA sequencing
-    \cite{sato2019cellfishing
+    [@doi:10.1186/s13059-019-1639-x]
     
 # Cell types can be pragmatically defined for annotation purposes
 ## CHETAH: a selective, hierarchical cell type identification method for single-cell RNA sequencing
-    \cite{de2019chetah
+    [@doi:10.1093/nar/gkz543]
 
 \chapter{Biology
 
 # Establishing orthology and paralogy relations for genes is challenging
 ## How Single-Cell Genomics Is Changing Evolutionary and Developmental Biology
-    \cite{marioni2017single
+    [@doi:10.1146/annurev-cellbio-100616-060818]
     
 \chapter{Use of language
 
 # Proper categorization impacts therapeutics
 ## Philosophy of Biology: Towards a classification of stem cells
-    \cite{laplane2019philosophy    
+    [@doi:10.1073/pnas.1900357116]    
     
 # Implicit pre-supositions are embedded in scientific articles
 ## Philosophy of Biology: Towards a classification of stem cells
-    \cite{laplane2019philosophy    
+    [@doi:10.1073/pnas.1900357116]    
 ## Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence
-    \cite{keeling2019meanings
+    [@doi:10.7554/eLife.47014]
 ## Philosophy of Biology: Philosophical bias is the one bias that science cannot avoid
-    \cite{andersen2019philosophy
+    [@doi:10.7554/eLife.44929]
     
 # Language influences how we practice science.
 
 ## Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence
-    \cite{keeling2019meanings
+    [@doi:10.7554/eLife.47014]
     
 ## Philosophy of Biology: The challenges of big data biology
-    \cite{leonelli2019philosophy    
+    [@doi:10.7554/eLife.47381]    
     
 ## Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence
-    \cite{keeling2019meanings 
+    [@doi:10.7554/eLife.47014] 
     
 # Unified definition of a concept might be impossible in practice.
 
 ## Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence
-\cite{keeling2019meanings 
+[@doi:10.7554/eLife.47014] 
     
 # We should explicit define disputed terms.
 ## Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence
-\cite{keeling2019meanings 
+[@doi:10.7554/eLife.47014] 
 
 # Increasing power of computational algorithms requires a proportional increase in critical thinking
 
 ## Philosophy of Biology: The challenges of big data biology
-    \cite{leonelli2019philosophy 
+    [@doi:10.7554/eLife.47381] 
     
     
 # Ontology classes should always represent certainty, and not probability.
-    \cite{sarntivijai2019cells
+    [@doi:10.1186/s12859-019-2721-9]
 
 # The cell is the basic unit of life
-    \cite{sarntivijai2019cells
+    [@doi:10.1186/s12859-019-2721-9]
