--- a/content/04.concepts.md
+++ b/content/04.concepts.md
@@ -3,7 +3,7 @@ developmental homoplasy
 
 
 ## The origin and evolution of cell types
-    \cite{arendt2016origin
+    [@doi:10.1038/nrg.2016.127]
     
 terminal selectors:  a novel and unique combination of transcription factors, which establish a cell type identity 
 
@@ -33,7 +33,7 @@ phenotypically similar due to independent changes occurring in separate evolutio
 Concerted evolution: Similar phenotypic changes that occur simultaneously across different cell types of the same species as a result of altering genetic information shared among the cell types.
 
 ## The evolution of cell types in animals: emerging principles from molecular studies
-    \cite{arendt2008evolution
+    [@doi:10.1038/nrg2416]
     
 typogenetic tree 
 
@@ -47,20 +47,20 @@ cell typogenesis:  evolutionary diversification of cell type
 attractor is a location in the state space of a dynamical system that will move toward and to which it will return if perturbed. (" what we think of as distinct cell types correspond to attractors of that system (Kauffman 1993)"
 
 ## Key transitions during the evolution of animal phototransduction: novelty, "tree-thinking," co-option, and co-duplication. 
-    \cite{plachetzki2007key
+    [10.1093/icb/icm050]
     
 bricolage/tinkering:  novel traits originate as new combinations of existing traits
 
 ## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
-    \cite{sugino2019mapping
+    \cite{[@doi:10.7554/eLife.38619]
     
 Pan-neuronal genes (genes expressed commonly in all neuronal populations but expressed at lower levels or not at all in nonneuronal cell populations.
 
 GACPs: ## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
-    \cite{sugino2019mapping
+    \cite{[@doi:10.7554/eLife.38619]
     
 ## Terminal Selectors of Neuronal Identity
-    \cite{hobert2016terminal    
+    [@doi:10.1016/bs.ctdb.2015.12.007]    
 Given the neuron identity-defining properties, I proposed to call these transcription factors “terminal selectors.This terminology is an extension of the selector gene concept, originally proposed by Garcia-Bellido (1975).
 
 ## PanglaoDB: a web server for exploration of mouse and human single-cell RNA sequencing data
