--- a/content/05.systems.md
+++ b/content/05.systems.md
@@ -3,7 +3,7 @@
 # Classification systems
 
 ## A periodic table of cell types
-    \cite{xia2019periodic
+    [@doi:10.1242/dev.169854 ]
     
 ### Highlights
 Propose a ‘periodic table of cell types’ can be as a framework for distinguishing cell types from cell states, in which the different states of the same cell type are analogous to ‘isotopes’
