--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -1,5 +1,5 @@
 ## Heterogeneity of neutrophils
-    \cite{ng2019heterogeneity
+    [@doi:10.1038/s41577-019-0141-8]
     
 ### Highlights
 
@@ -55,7 +55,7 @@ References fluctuate between human, mouse or general "neutrophils".
 
 ## Neuronal cell types
 
-    \cite{masland2004neuronal
+    [@doi:10.1016/j.cub.2004.06.035]
 
 ### Highlights
 
