--- a/content/07.evolutionary.md
+++ b/content/07.evolutionary.md
@@ -1,6 +1,6 @@
 # Evolutionary perspectives
 ## How Single-Cell Genomics Is Changing Evolutionary and Developmental Biology
-    \cite{marioni2017single
+    [@doi:10.1146/annurev-cellbio-100616-060818]
     
 ### Highlights
 
@@ -30,7 +30,7 @@ Disagree with the developmental tree, as it is strictly \textit{not a tree; tran
 Very good article, strong evolutionary perspective.
 
 ## The origin and evolution of cell types
-    \cite{arendt2016origin
+    [@doi:10.1038/nrg.2016.127]
     
 ### Highlights
 Key to cell type identity are evolutionary changes in the ‘core regulatory complex’ (CoRC) of transcription factors, that make emergent sister cell types distinct, enable their independent evolution and regulate cell type-specific traits termed apomeres.
@@ -110,7 +110,7 @@ By Arendt's definition "specialized Antigen Presenting Cells" is not a cell type
 The recognition that cell type identity and specific function depend on only a small set of genetic information, including CoRCs and apomeres, enables the efficient identification and categorization of cell types across the animal tree. --> I tend to disagre with this sentence.
 
 ## The evolution of cell types in animals: emerging principles from molecular studies
-    \cite{arendt2008evolution
+    [@doi:10.1038/nrg2416]
     
 ### Highlights
 
@@ -163,7 +163,7 @@ I like the retina as a model.
 
 
 ## Key transitions during the evolution of animal phototransduction: novelty, "tree-thinking," co-option, and co-duplication.
-    \cite{plachetzki2007key
+    [10.1093/icb/icm050]
     
 ### Highlights
 
