--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -1,6 +1,6 @@
 # Ontology-related
 ## Cell type discovery using single-cell transcriptomics: implications for ontological representation
-    \cite{aevermann2018cell
+    [@doi:10.1093/hmg/ddy100]
 ### Highlights
 
 The Cell Ontology (CL) is a biomedical ontology  to provide reference nomenclature for in vivo cell types in humans and major model organisms. However, the advent of high-content single-cell transcriptomics for cell type characterization has resulted in a number of challenges for their representation in the CL.
@@ -114,7 +114,7 @@ Probabilities cannot be asserted directly into the ontology, but rather using ot
 ### Comments
 
 ## Cells in ExperimentaL Life Sciences (CELLS- 2018): capturing the knowledge of normal and diseased cells with ontologies
-    \cite{sarntivijai2019cells
+    [@doi:10.1186/s12859-019-2721-9]
     
 ### Highlights
 
