--- a/content/09.opinion.md
+++ b/content/09.opinion.md
@@ -1,7 +1,7 @@
 # Opinion articles
 
 ## What Is Your Conceptual Definition of “Cell Type” in the Context of a Mature Organism? 
-    \cite{clevers2017your
+    [@doi:10.1016/j.cels.2017.03.006]
     
 ### Highlights
 
@@ -35,7 +35,7 @@ J. Christopher Love: To define a cell type requires first considering what a cel
 Lots of good points. Functional definitions seem to be really important. Discussion about states is also present. Comments point also to the need of the classifcation to be useful do describe the biology of the organism. 
 
 ## Exciting times to study the identity and evolution of cell types 
-    \cite{sachkova2019exciting
+    [@doi:10.1242/dev.178996]
     
 ### Highlights
 Questions:
@@ -73,7 +73,7 @@ Good assembly of research projects on the evolution of cell types.
  Concept of "‘Recombination’ between cell types" as a mechanism to form new cell types in the end highlights the notion of intersected cell types. As they inevitably overlap.
  
 ## Function first: classifying cell types and circuits of the retina
-    \cite{vlasits2019function
+    [@doi:10.1016/j.conb.2018.10.011]
     
 ### Highlights
 
@@ -131,7 +131,7 @@ Ultimately, most single-cell studies aim to identify and characterize the genes 
 Super cool figure 1. 
 
 ## Cell type discovery and representation in the era of high-content single cell phenotyping
-    \cite{bakken2017cell
+    [@doi:10.1186/s12859-017-1977-1]
     
 ### Highlights
 
