--- a/content/10.elife.md
+++ b/content/10.elife.md
@@ -1,6 +1,6 @@
 
 ## Philosophy of Biology: Towards a classification of stem cells
-    \cite{laplane2019philosophy
+    [@doi:10.1073/pnas.1900357116]
 ### Highlights
 Stem cells have traditionally been viewed as distinct from most other types of cells. 
 
@@ -66,7 +66,7 @@ Faculty at several health professions schools teach courses on editing Wikipedia
 (These are all expected conclusions, as these pages are manually curated to be of relevance to medicine. )
 
 ## Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence
-    \cite{keeling2019meanings
+    [@doi:10.7554/eLife.47014]
 ### Highlights
 
 Here we explore the use of this word (and derivatives like functional) in research papers about de novo gene birth.
@@ -119,7 +119,7 @@ Explicitly mentions the need for a better conceptualization of cell types.
 About 54 references. 
 
 ## Philosophy of Biology: Philosophical bias is the one bias that science cannot avoid
-    \cite{andersen2019philosophy
+    [@doi:10.7554/eLife.44929]
 ### Highlights
 
 ’philosophical bias’. These are basic implicit assumptions in science about how the world is (ontology), what we can know about it (epistemology), or how science ought to be practiced (norms)
@@ -146,7 +146,7 @@ Awareness of the bias is a necessary premise for any argument of a theory is bet
 About 27 references. Does not make any kind of quantitative experiment, mostly relying on arguments and well constructed paragraphs/ideas.
 
 ## Philosophy of Biology: The challenges of big data biology
-    \cite{leonelli2019philosophy
+    [@doi:10.7554/eLife.47381]
 ### Highlights
 Big data biology also raises fundamental questions in the philosophy of science: for example, what is a good dataset, and how can reliable knowledge be extracted from big data?
 
