--- a/content/12.other.md
+++ b/content/12.other.md
@@ -3,7 +3,7 @@
 
 
 ## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
-    \cite{sugino2019mapping
+    \cite{[@doi:10.7554/eLife.38619]
     
 ### Highlights
 200 genetically identified cell populations, and two gene classes contributing distinctly to neuronal diversity.
@@ -30,7 +30,7 @@ Treats groups not as cell types, but as genetically- and anatomically-identified
 Explicit assumption of hierarchy and atomic cell types!
 
 ## Terminal Selectors of Neuronal Identity
-    \cite{hobert2016terminal
+    [@doi:10.1016/bs.ctdb.2015.12.007]
     
 ### Highlights
 
@@ -87,7 +87,7 @@ We propose a landscape model that is conserved in mammal: stem cells are transcr
 ### Comments
 
 ## The Definition of Cell Type
-    \cite{schwartz1999definition
+    [@doi:10.1161/01.RES.84.10.1234]
     
 ### Highlights
 What do we mean by “cell type?” 
