--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -37,7 +37,7 @@ Annotates each single cell with a ranking of "terminal" cell types.
 The ppropagation of annotations is very useful. 
 
 ## CellFishing.jl: an ultrafast and scalable cell search method for single-cell RNA sequencing
-    \cite{sato2019cellfishing
+    [@doi:10.1186/s13059-019-1639-x]
     
 ### Highlights
 We propose CellFishing.jl, a new method for searching atlas-scale datasets for similar cells.
@@ -93,7 +93,7 @@ Interesting. We want to study the cell types themselves, not the cells per se.
 
 
 ## CHETAH: a selective, hierarchical cell type identification method for single-cell RNA sequencing
-    \cite{de2019chetah
+    [@doi:10.1093/nar/gkz543]
     
 ### Highlights
 CHETAH (CHaracterization of cEll Types Aided by Hierarchical classification) is an accurate cell type identification algorithm.
