--- a/content/14.philosophy.md
+++ b/content/14.philosophy.md
@@ -1,5 +1,5 @@
 ## Opinion: Why science needs philosophy
-    \cite{laplane2019philosophy
+    [@doi:10.1073/pnas.1900357116]
 ### Highlights
 
 This independence created by philosophical insight is—in my opinion— the mark of distinction between a mere artisan or specialist and a real seeker after truth. (Albert Einstein, Letter to Robert Thornton, 1944)
