text: Add notes on species book

--- a/content/15.species.md
+++ b/content/15.species.md
@@ -149,13 +149,38 @@ Paratypes. Paratypes are specimens that the person making the original descripti
 
 Topotype. These are specimens collected from the same locality as the type material (although not necessarily at the same time). Again, they have no official standing, but if a museum has such material it is usually well worth seeing. I can vouch for the fact that with marine invertebrates, topotypical material of the species you are seeking is much more likely to belong to that species than material labeled with the same name but from thousands of miles away.
 
+##### Chapter 6. Species Descriptions in Taxonomy Chapter
 
+Objects without names cannot well be talked about or written about; without descriptions they cannot be identified and such knowledge as may have accumulated regarding them is sealed. – Gahan (1923:73)
+
+There are many different kinds of taxonomic publications, ranging from short notes describing a single species to multivolume monographs and treatises
 
 ### Comments
 Figure 1.1 New equipment and new habitats yield new species.
 
 We do not have anything like a "species type" for cell types. 
 --> Same is true for cell types!
+
+Species descriptions are often published in “mixed” papers, in which the new species is described in conjunction with the results of research on its physiology, morphology, reproduction, ecology, and so on.
+
+The other people who are likely to deal with subspecific variation are graduate students and professionals in genetics and conser- vation biology, who often end up studying variation within a species. They are almost the only biologists now doing “gamma” taxonomy, once considered to be the highest form of systematics.
+
+Synopses summarize current knowledge of morphology, ecology, terminology, and classification of a group of organisms.
+
+A taxonomic catalog (often spelled catalogue) usually describes the specimens or species of a group of organisms that are found in the collection ofparticular museum or herbarium.
+
+A revision involves restudy ofa group to correct or improve its diagnosis, description, or phylogeny. As Mayr (1969) pointed out, this is one of the most important types of scientific publication for groups in which many new species are still being described.
+
+In botany there is another category belowthe level ofa revision, called a conspectus, defined by Stace (1989) as an outline ofa revision
+
+Monographs treat the systematics of a group in the most complete detail possible.
+
+Because of the historical nature of taxonomic research, taxonomic publications will be used by generations of taxonomists.
+
+##### Chapter 8. Naming Species: Etymology
+Words are in themselves among the most interesting objects of study, andthe names ofanimals andplants are worthy ofmore consideration than Biologists are inclinedto give them. –Savory (1962:vii)
+
+
 
 
 # Template 
