--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -1,4 +1,4 @@
-# Ontology-related
+# Cell Ontology-related
 ## Cell type discovery using single-cell transcriptomics: implications for ontological representation
     [@doi:10.1093/hmg/ddy100]
 ### Highlights
@@ -569,7 +569,7 @@ Formalization is needed to support multiple inheritance classification querying 
 --> Solution: bottom up classification starting with the most specific. 
 
 
-# Template 
+# General Ontology-related
 
 ## Formalization of taxon-based constraints to detect inconsistencies in annotation and ontology development
 [@doi:10.1186/1471-2105-11-530]
@@ -604,6 +604,28 @@ A scope is different from a taxon constraint in it is not inherited by subtypes,
 For example, we do not expect to find photosynthesis in all bacteria. 
 
 Union classes also needed for cell types. 
+
+# Template 
+
+## Ontology and taxonomy – stop comparing things that are incomparable
+[@url:https://janzz.technology/ontology-and-taxonomy-stop-comparing-things-that-are-incomparable/]
+### Highlights
+
+to quote Adrian Bowles, “there is no machine intelligence without (knowledge) representation.”
+
+ execute tasks that require explicit reasoning based on general and domain-specific knowledge, such as understanding news articles, preparing food or buying a car. Thus, such tasks require information that is not part of the input data.
+
+ Speaking metaphorically, a taxonomy equals a tree whereas an ontology comes closer to a forest.
+
+ axonomies represent a collection of topics with is-a’-relationships while ontologies allow for much more complex connections, such as ‘has-a’- and ‘use-a’-relations
+
+ The semantic system relies on explicit, human-understandable representations of concepts, relationships, and rules to develop the desired domain knowledge.
+
+The JANZZ ontology is by far the largest, most complicated and most complete occupation data ontology in the world.
+
+
+### Comments
+
 
 # Template 
 
