fix: Add notes on species ethymology

--- a/content/15.species.md
+++ b/content/15.species.md
@@ -180,7 +180,23 @@ Because of the historical nature of taxonomic research, taxonomic publications w
 ##### Chapter 8. Naming Species: Etymology
 Words are in themselves among the most interesting objects of study, andthe names ofanimals andplants are worthy ofmore consideration than Biologists are inclinedto give them. –Savory (1962:vii)
 
+Some people approach naming their new species with trepidation,
+worrying about stumbling over unfamiliar or half-forgotten Latin and Greek.Others behave like expectant parents, daydreaming about potential names for
+Most often, the species name is an adjective or an adjective–adverb or adjective– adjective combination
 
+One of the most useful is The Composition ofScientific Words, by Roland W. Brown (1956).
+A Source-Book ofBiological Names and Terms by Edmund C. Jaeger (1955) is also helpful.
+
+The codes of nomenclature give some basic rules about the formation of species names.
+
+Descriptive names point out some characteristic or combination of characteristics of the species.
+
+Coining a species name by combining two terms makes a more accurate description possible. When two terms are combined they become one word with no hyphenation
+ex: Uvularia grandiflora
+
+Geographic names are derived from the habitat or locality in which the organism was first found:
+
+Each description of a new species should contain an etymology section, giving the meaning and origin of the species name.
 
 
 # Template 
