text: Add notes about flowCL

--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -569,6 +569,29 @@ Formalization is needed to support multiple inheritance classification querying 
 --> Solution: bottom up classification starting with the most specific. 
 
 
+
+
+# Template 
+
+## flowCL: ontology-based cell population labelling in flow cytometry
+[@doi:10.1093/bioinformatics/btu807]
+
+### Highlights
+
+We developed flowCL, a software package that performs semantic labelling of cell populations based on their surface markers.
+By providing automated labelling of cell populations based on their immunopheno- type, flowCL allows for unambiguous and reproducible identification of standardized cell types
+
+However, multiple issues arose when we at- tempted to use the CL for labelling of cell types derived from FCM data
+
+To address these challenges, we developed flowCL, a software package that enables researchers to unambigu- ously label their cell populations based on their immunophenotype using the CL. W
+
+The steps flowCL takes are as follows: (1) A SPARQL (http://www.w3.org/TR/rdf-sparql-query/) query against the CL fetches the labels and IDs corresponding to the input markers by text matching to the label or synonyms fields in the CL; (2) The marker labels are used to retrieve a list of cell types that contain (or lack) the marker labels; (3) The set of markers that make up each cell type is then retrieved; (4) A final query retrieves all parents up to the root of the CL for each cell type to build a tree diagram of the results.
+
+By providing automated labelling of cell populations based on their immunophenotype, flowCL allows researchers to report results using cell type labels.
+
+
+### Comments
+
 # General Ontology-related
 
 ## Formalization of taxon-based constraints to detect inconsistencies in annotation and ontology development
@@ -605,7 +628,6 @@ For example, we do not expect to find photosynthesis in all bacteria.
 
 Union classes also needed for cell types. 
 
-# Template 
 
 ## Ontology and taxonomy – stop comparing things that are incomparable
 [@url:https://janzz.technology/ontology-and-taxonomy-stop-comparing-things-that-are-incomparable/]
