--- a/content/15.species.md
+++ b/content/15.species.md
@@ -163,7 +163,7 @@ We do not have anything like a "species type" for cell types.
 
 Species descriptions are often published in “mixed” papers, in which the new species is described in conjunction with the results of research on its physiology, morphology, reproduction, ecology, and so on.
 
-The other people who are likely to deal with subspecific variation are graduate students and professionals in genetics and conser- vation biology, who often end up studying variation within a species. They are almost the only biologists now doing “gamma” taxonomy, once considered to be the highest form of systematics.
+The other people who are likely to deal with subspecific variation are graduate students and professionals in genetics and conservation biology, who often end up studying variation within a species. They are almost the only biologists now doing “gamma” taxonomy, once considered to be the highest form of systematics.
 
 Synopses summarize current knowledge of morphology, ecology, terminology, and classification of a group of organisms.
 
