text: Add notes about species diagnosis

--- a/content/15.species.md
+++ b/content/15.species.md
@@ -149,11 +149,81 @@ Paratypes. Paratypes are specimens that the person making the original descripti
 
 Topotype. These are specimens collected from the same locality as the type material (although not necessarily at the same time). Again, they have no official standing, but if a museum has such material it is usually well worth seeing. I can vouch for the fact that with marine invertebrates, topotypical material of the species you are seeking is much more likely to belong to that species than material labeled with the same name but from thousands of miles away.
 
-##### Chapter 6. Species Descriptions in Taxonomy Chapter
+#### Chapter 6. Species Descriptions in Taxonomy Chapter
 
 Objects without names cannot well be talked about or written about; without descriptions they cannot be identified and such knowledge as may have accumulated regarding them is sealed. – Gahan (1923:73)
 
 There are many different kinds of taxonomic publications, ranging from short notes describing a single species to multivolume monographs and treatises
+
+
+#### Chapter 8. Naming Species: Etymology
+Words are in themselves among the most interesting objects of study, andthe names ofanimals andplants are worthy ofmore consideration than Biologists are inclinedto give them. –Savory (1962:vii)
+
+Some people approach naming their new species with trepidation,
+worrying about stumbling over unfamiliar or half-forgotten Latin and Greek.Others behave like expectant parents, daydreaming about potential names for
+Most often, the species name is an adjective or an adjective–adverb or adjective– adjective combination
+
+One of the most useful is The Composition ofScientific Words, by Roland W. Brown (1956).
+A Source-Book ofBiological Names and Terms by Edmund C. Jaeger (1955) is also helpful.
+
+The codes of nomenclature give some basic rules about the formation of species names.
+
+Descriptive names point out some characteristic or combination of characteristics of the species.
+
+Coining a species name by combining two terms makes a more accurate description possible. When two terms are combined they become one word with no hyphenation
+ex: Uvularia grandiflora
+
+Geographic names are derived from the habitat or locality in which the organism was first found:
+
+Each description of a new species should contain an etymology section, giving the meaning and origin of the species name.
+
+#### Chapter 9. Type and Voucher Material Chapter
+Holotypes, syntypes, lectotypes, andneotypes are the bearers ofthe scientific names ofall animal taxa. They are the international standards ofreference that provide objectivity in zoological nomenclature. They are heldin trust for science by allzoologists andby persons responsible for their safe keeping. –ICZN, Art. 72(g)
+
+The type is the name-bearer, the specimen associated with a name by description and publication. Its use provides an objective base for our system of biological nomenclature.
+
+Save a specimen or some part of the material of each taxon collected and prepare it as a reference sample, or voucher.
+The holotype is a single specimen chosen as the nomenclature type.
+
+The type series includes all specimens on which a description of a new species is based. Syntypes are two or more specimens included in the type series. A lectotype is a single specimen selected from syntypes of a previously described species to serve as the equivalent of the holotype
+
+Along with publication and priority, typification, the designation ofa type ofa scientific name, is one ofthe chiefprinciples ofthe international codes ofnomenclature (Jeffrey 1989). Both current codes for plants and animals have sections with rules concerning types. The ICBN requires that a type be indicated in order for a newplant species name to be accepted as validly published.
+
+Once a type is selected and the description published, that type cannot be changed, even by the author, without going through a good deal of red tape.
+
+Select a specimen that is in good condition, has been well preserved, and clearly shows as many diagnostic characters (those distinguishing it from other taxa) as possible.
+
+Even if your description is the best that it was possible to write at the time it is published, it still might not be sufficient to distinguish your species from a new relative discovered at some future time, without restudy of your type specimen.
+
+For protozoans, ifthe species can’t be recognized by a single individual,the type can consist of a number of individuals mounted in slide prepa- rations, or by a series of preparations showing different stages of the life cycle. This is called a hapantotype (ICZN, Art. 72 C iv, p. 143)
+
+The type specimen or specimens should be deposited in a reputable scientific institution.
+
+It is good practice to deposit voucher specimens of any organism or organisms you have studied and published research papers on into an institutional collection, even if they are not new species.
+
+#### Chapter 10. Diagnosis
+
+“Diagnosis”is ultimately fromGreek ejbhjho (xtlx, “distinguish
+between [two] things,”and “definition”from Latin definio, “enclose within limits.”The concepts are importantly different, but in fact taxonomists seldom use the terms consistently and commonly assume that they are synonymous. –Simpson (1961:138)
+
+Whereas the number oftaxonomic characters that could be mentioned in a description may indeed be limited “only by the patience of the investigator” (Mayr et al. 1953:106), a diagnosis includes just the characters that distinguish that species from others.
+
+A differential diagnosis specifically shows the ways in which the taxon differs from other taxa that you identify by name.
+
+In zoological taxonomy, diagnosis is sometimes called definition.
+
+a diagnostic character is one that is useful or necessary to distinguish a species or other taxon from its relatives. They should be differences that can be quickly recognized by others
+
+It is important to remember that a character that is useful for diagnosis
+in one group may be useless for diagnosis in another, even within the genera ofone family (Mayr et al. 1953). Or as botanists have put it, “The exact nature of the diagnosis is not stated in the Code, nor can it easily be specified because of the enormous diversity of organisms covered by the Code” (Kirk and Cannon 1991:281).
+
+
+#### Chapter 11. Description Section
+Selecting the characters necessary to give a goodidea ofa species in a short description requires a thorough knowledge ofthe subject anda methodicalmind.
+–Bentham (1874:48)
+
+Taxonomic characters, as you recall from chapter 3, are all the features of an taxon by which its members actually or potentially differ from those of another taxon
+
 
 ### Comments
 Figure 1.1 New equipment and new habitats yield new species.
@@ -176,28 +246,6 @@ In botany there is another category belowthe level ofa revision, called a conspe
 Monographs treat the systematics of a group in the most complete detail possible.
 
 Because of the historical nature of taxonomic research, taxonomic publications will be used by generations of taxonomists.
-
-##### Chapter 8. Naming Species: Etymology
-Words are in themselves among the most interesting objects of study, andthe names ofanimals andplants are worthy ofmore consideration than Biologists are inclinedto give them. –Savory (1962:vii)
-
-Some people approach naming their new species with trepidation,
-worrying about stumbling over unfamiliar or half-forgotten Latin and Greek.Others behave like expectant parents, daydreaming about potential names for
-Most often, the species name is an adjective or an adjective–adverb or adjective– adjective combination
-
-One of the most useful is The Composition ofScientific Words, by Roland W. Brown (1956).
-A Source-Book ofBiological Names and Terms by Edmund C. Jaeger (1955) is also helpful.
-
-The codes of nomenclature give some basic rules about the formation of species names.
-
-Descriptive names point out some characteristic or combination of characteristics of the species.
-
-Coining a species name by combining two terms makes a more accurate description possible. When two terms are combined they become one word with no hyphenation
-ex: Uvularia grandiflora
-
-Geographic names are derived from the habitat or locality in which the organism was first found:
-
-Each description of a new species should contain an etymology section, giving the meaning and origin of the species name.
-
 
 # Template 
 
